2000-02-08  Alexander Larsson  <alla@lysator.liu.se>

	* lib/font.[ch]:
	Add support for font-sucking.
	Implementation borrowed from gnome-canvas.
	
	* app/render_libart.[ch]:
	Implement text rendering.

2000-02-07  Alexander Larsson  <alla@lysator.liu.se>

	* app/properties.c (create_dialog):
	ref and sink no_properties_dialog.

2000-02-07  James Henstridge  <james@daa.com.au>

	* app/group.c (group_describe_props): new function.  Return the
	intersection of the properties of the contained objects that
	implement the describe_props interface.
	(group_get_props): implement by iterating through contained objects
	and calling their get_props method until all properties have been
	set.  Maybe this should go through all objects all the time??
	(group_set_props): implement by calling set_props method on all
	contained objects.
	(group_ops): use standard props dialog creation routines.

	* lib/properties.c (prop_desc_lists_intersection): fix implementation
	of intersection -- I was using i++ instead of i-- in a for loop :(

	* objects/custom/custom.c (custom_register_objects): fix usage
	of dia_get_data_directory again.

	* lib/sheet.c: fix up use of dia_get_data_directory, so that we
	actually read the sheets.

2000-02-06  Alexander Larsson  <alla@lysator.liu.se>

	Win32 port by Hans Breuer <Hans@Breuer.org>

	* app/Makefile.am:
	Remove DATADIR and LIBDIR defines.

	* lib/Makefile.am:
	Add dia_dirs.c and dia_dirs.h
	Added DATADIR and LIBDIR defines.

	* lib/dia_dirs.[ch]:
	New files for handling special directories.

	* app/app_procs.c:
	* app/commands.c:
	* lib/sheet.c:
	* objects/custom/custom.c:
	Fix warnings.  Use directory functions.

	* app/diagram.h:
	Add prototype for diagram_redraw_all.

	* app/diaunitspinner.c:
	* app/filedlg.c:
	* app/interface.c:
	* app/preferences.c:
	Fix warning.

	* app/load_save.c:
	Win32 doesn't have mkstemp and fchmod.

	* app/paginate_psprint.c:
	Win32 calls popen _popen and pclose _pclose.
	
	* app/arrow.c: